[package]
name = "touchsx"
version = "0.1.0"
authors = ["Conor Barnes <conorbarnes93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
regex = "1"
convert_case = "0.4.0"

[profile.release]
panic="abort"
opt-level="z"
lto="fat"
codegen-units=1